# coaldecoder-python

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bkp  CMakeLists.txt.bkp.bkp  Makefile  README.md  pyproject.toml  setup.py  setup.py.bkp
coaldecoder/: __init__.py  calculate_rates.py
src/: admixture_matrix.hpp  array_conversion.hpp  coalescent_model.cpp  convert.hpp  main.cpp  matrix_exponential.hpp  transition_rate_matrix.hpp
src/coaldecoder/: __init__.py
tests/: inferred_rates.py  optimization.py  optimization_discr.py  plot_pair.py  simulate.py  test_back_equivalence.py  test_basic.py  true_pair_rates.py  true_rates.py  true_trio_rates.py
tests/data/: .gitignore  admixture_coefficients.npy  demographic_parameters.npy  demographic_parameters_gradient.npy  epoch_durations.npy  expected_coalescence_rates.npy  generate_data.R  observed_rates_breaks.npy  observed_rates_names.npy  observed_rates_stddev.npy  observed_rates_values.npy
